--- a/Penumbra.String.csproj
+++ b/Penumbra.String.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Dalamud.NET.Sdk/12.0.0">
+<Project Sdk="Dalamud.NET.Sdk/12.0.2">
     <PropertyGroup>
         <AssemblyTitle>ByteString</AssemblyTitle>
         <Copyright>Copyright © 2025</Copyright>
@@ -7,6 +7,10 @@
         <PackageVersion>1.0.6</PackageVersion>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <OutputPath>bin\$(Configuration)\</OutputPath>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <Use_DalamudPackager>false</Use_DalamudPackager>
     </PropertyGroup>
 
     <PropertyGroup>
